2010-12-04  Ethan A Merritt  <merritt@u.washington.edu>

	* src/gadgets.c src/save.c src/set.c src/show.c src/tables.c
	src/tables.h src/unset.c docs/gnuplot.doc: 'set pointintervalbox'.

2010-12-03  Ethan A Merritt  <merritt@u.washington.edu>

	* src/axis.c (gen_tics): Casting to a float may have been clever, but
	we can't afford the loss of precision (fails for time coordinates).

	* src/pm3d.c (pm3d_depth_queue_flush): Restore deleted code needed for
	extended color support.  (There are still some svga users after all!)

	* term/emf.trm: 
	Use the EMR_ELLIPSE primitive to draw point types 6 and 7.
	Make point types 4 and 5 slightly larger (looks better on MSWin).
	Switch to using linecap=flat and linejoin=miter by default,
	but add option "rounded/butt" to toggle this.

2010-11-29  Ethan A Merritt  <merritt@u.washington.edu>

	* src/set.c (set_decimalsign):  Possible fix for problem with
	numeric locales on Windows.  Bug #3120819.

2010-11-28  Ethan A Merritt  <merritt@u.washington.edu>

	* src/gadgets.c src/gadgets.h src/graphics.c demo/dashcolor.dem:
	Fix breakage to the pointinterval property that was caused by 
	opaque key support.  Add a demo plot illustrating pointinterval.

2010-11-26  Ethan A Merritt  <merritt@u.washington.edu>

	* term/canvas.trm demo/html/webify_canvas.pl
	term/js/gnuplot_common.js term/js/gnuplot_dashedlines.js:
	Add support for dashed lines and rounded/butt line properties.

2010-11-24  Ethan A Merritt  <merritt@u.washington.edu>

	* term/canvas.trm term/js/gnuplot_common.js term/js/gnuplot_mouse.js:
	Revamp the javascript support for the HTML5 canvas terminal.
	Move all global variables into a single object "gnuplot" declared in
	gnuplot_common.js.  This revision also adds polar mode mousing support.

	* demo/html/Makefile.canvas demo/html/index.canvas 
	demo/html/mouseable.dem demo/html/mousebox.template 
	demo/html/webify_canvas.pl:
	Revamp the demos and build scripts to use the new javascript syntax.

	See tracker item #3058147
